# htsim-rs

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  COMPARISON.md  Cargo.toml  README.md  bug.md  out.json  plan.md  test.md  tutorial.md
src/: demo.rs  lib.rs
src/cc/: collective.rs  mod.rs  ring.rs
src/experiments/: demo.rs  mod.rs
src/net/: api.rs  deliver_packet.rs  id.rs  link.rs  link_ready.rs  mod.rs  net_world.rs  network.rs  network_proto.rs  network_viz.rs  node.rs  packet.rs  proto_bridge.rs  routing.rs  stats.rs  transport.rs
src/proto/: dctcp.rs  mod.rs  tcp.rs
src/queue/: drop_tail.rs  mod.rs  priority.rs
src/sim/: event.rs  mod.rs  scheduled_event.rs  simulator.rs  time.rs  workload.rs  world.rs
src/test/: collective_op.rs  dctcp_ecn.rs  ecmp_hash_mode.rs  mod.rs  network_integration.rs  packet.rs  queues.rs  ring_collectives.rs  routing_table.rs  sim_time.rs  simulator.rs  tcp_rto.rs  topologies.rs  viz_meta.rs  workload_spec.rs
src/topo/: dumbbell.rs  fat_tree.rs  mod.rs
src/viz/: mod.rs  types.rs
tests/: cli_workload_sim.rs  cli_workloads_sim.rs
tools/: neusight_predict_server.py  neusight_to_workload.py  parse_logs.py  plot_allreduce_tcp.py  workload_sample.json
tools/viz/: README.md  index.html  package-lock.json  package.json
tools/viz/src/: App.vue
viz/: README.md  index.html  package-lock.json  package.json  vite.config.js
viz/src/: App.vue
workload_gen/: README.md  pyproject.toml
workload_gen/workload_gen/: __init__.py  cli.py  config.py  generator.py  hf_model.py  model.py  profiler.py  server.py  workload.py
(+25 files in other folders)
